<resources>
    <string name="app_name">PROJECT</string>
    strings.xml

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="switch_to_home">switch to home</string>
    <string name="switch_to_add_new_wallet_page">switch to add new wallet page</string>
    <string name="switch_to_personal_page">switch to personal page</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="notification">notification</string>
    <string name="all_product">All Product</string>
    <string name="admin">Admin</string>
    <string name="welcome">Welcome!</string>
    <string name="description">Description</string>
    <string name="back_to_mainactivity">back to MainActivity</string>
    <string name="price">Price</string>
    <string name="add_new_wallet">Add New Wallet</string>
    <string name="name">Name</string>
    <string name="material">Material</string>
    <string name="size">Size</string>
    <string name="image_url">Image URL</string>
    <string name="edit_wallet">Edit Wallet</string>
    <string name="save_changes">Save changes</string>
    <string name="back_to_admin_home">back to admin home</string>
    <string name="image_of_wallet">image of wallet</string>

</resources>