
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminActivity.EditWalletActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"

            >

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/back_to_mainactivity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back_24" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:text="@string/edit_wallet"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/textViewTitle"
                android:layout_marginTop="10dp"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp" />

            <EditText
                android:id="@+id/editTextPrice"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/editTextName"
                android:layout_marginTop="10dp"
                android:hint="@string/price"
                android:inputType="number"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextPrice"
                android:layout_marginTop="10dp"
                android:gravity="top|left"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:lines="5"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:scrollbars="vertical"
                android:verticalScrollbarPosition="right" />

            <EditText
                android:id="@+id/editTextMaterial"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/editTextDescription"
                android:layout_marginTop="10dp"
                android:hint="@string/material"
                android:inputType="text"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp" />

            <EditText
                android:id="@+id/editTextSize"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/editTextMaterial"
                android:layout_marginTop="10dp"
                android:hint="@string/size"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp" />

            <EditText
                android:id="@+id/editTextImage"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/editTextSize"
                android:layout_marginTop="10dp"
                android:hint="@string/image_url"
                android:inputType="text"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp" />

            <TextView
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/editTextImage"
                android:layout_marginTop="16dp"
                android:background="@drawable/black_button"
                android:gravity="center"
                android:text="@string/save_changes"
                android:textColor="@color/white" />

        </RelativeLayout>
    </ScrollView>

<!--    <androidx.coordinatorlayout.widget.CoordinatorLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="70dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        tools:layout_editor_absoluteY="624dp">-->
<!--        <com.google.android.material.bottomappbar.BottomAppBar-->
<!--            android:id="@+id/bottomAppBar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="bottom" >-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:baselineAligned="true"-->
<!--                android:orientation="horizontal">-->


<!--                <LinearLayout-->
<!--                    android:id="@+id/switchToHomePageBtn"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_weight="0.25"-->
<!--                    android:orientation="vertical"-->
<!--                    tools:ignore="UseCompoundDrawables">-->
<!--                    <ImageView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:contentDescription="@string/switch_to_home"-->
<!--                        app:srcCompat='@drawable/baseline_home_24'/>-->
<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/home"-->
<!--                        android:textAlignment="center"-->
<!--                        android:textColor="@color/black"/>-->
<!--                </LinearLayout>-->


<!--                <LinearLayout-->
<!--                    android:id="@+id/switchToAddPageBtn"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_weight="0.25"-->
<!--                    android:orientation="vertical"-->
<!--                    tools:ignore="UseCompoundDrawables">-->
<!--                    <ImageView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:contentDescription="@string/switch_to_add_new_wallet_page"-->
<!--                        app:srcCompat='@drawable/baseline_add_circle_24'/>-->
<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/add"-->
<!--                        android:textAlignment="center"-->
<!--                        android:textColor="@color/black"/>-->
<!--                </LinearLayout>-->
<!--                <LinearLayout-->
<!--                    android:id="@+id/swithToPersonalPageBtn"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_weight="0.25"-->
<!--                    android:orientation="vertical"-->
<!--                    tools:ignore="UseCompoundDrawables">-->
<!--                    <ImageView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:contentDescription="@string/switch_to_personal_page"-->
<!--                        app:srcCompat='@drawable/baseline_person_24'/>-->
<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/profile"-->
<!--                        android:textAlignment="center"-->
<!--                        android:textColor="@color/black"/>-->
<!--                </LinearLayout>-->

<!--            </LinearLayout>-->
<!--        </com.google.android.material.bottomappbar.BottomAppBar>-->


<!--    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>



